--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --runInBand --detectOpenHandles --forceExit",
+    "test2": "jest --runInBand  --collectCoverage"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "@types/jest": "29.4.0",
+    "autoprefixer": "10.4.13",
+    "jest": "29.4.2",
+    "postcss": "8.4.21",
+    "tailwindcss": "3.2.4",
+    "ts-jest": "29.0.5",
+    "typescript": "4.9.5",
+    "vite": "4.1.0"
   }
 }
